# craig

./: .dockerignore  .env.example  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  CONTRIBUTING.md  Containerfile  DOCKER.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  LICENSE  README  README.md  SELFHOST.DOCKER.md  SELFHOST.md  compose.yaml  config.json.example  convert.js  cook-username.js  cook.sh  craig-auto.js  craig-client.js  craig-commands.js  craig-features.js  craig-gms.js  craig-ogg.js  craig-rec.js  craig-runner.js  craig-shared.js  craig-utils.js  craig.js  craig.sh  default-config.js  delete.php  dl.php  docker-compose.dev.yml  (+38 more)
.claude/: settings.json
.devcontainer/: database-client-config.json  devcontainer.json  docker-compose.yml  on-create-command.sh  post-create-command.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template  settings.json
apacheconf/: 000-default.conf  apache2.conf
bot/: .env.example  package.json  tsconfig.json
cook/: aup-header.xml  avatars.sh  crc32.h  duration.sh  extnotes.c  ffmpeg-lgpl21.txt  info.sh  infotxt.sh  jsonnotes.sh  oggcorrect.c  oggduration.c  oggmultiplexer.c  oggstender.c  oggtracks.c  powersfx.sh  raw-partwise.sh  recinfo.js  userinfo.js  wavduration.c
craig/: auto.js  backup.js  client.js  commands.js  db.js  db.schema  default-config.js  ennuicastr-protocol.js  eris-flavor.js  features.js  gms.js  locale.js  log-convert.js  logdb.schema  ogg.js  rec.js  requesthandler.js  utils.js
data/: nowrecording.opus
docker/: .env.example  docker-compose.yml  ecosystem.config.cjs  entrypoint.sh  healthcheck.sh
docs/: ai-summarization.md  architecture.md  development.md  self-hosting.md  tasmas.md  useful-commands.md
locale/: en.json  en.json.xtra  en.php  es.json  fr.php  it.json  it.php  ja.json  ko.json  nl.json  pt.json  x-tokipona.json
macosx/: Makefile
njsp/: njsp.js  njsp.sh  nohup.out
patches/: svelte-awesome-color-picker@4.0.0.patch  svelte-awesome-color-picker@4.0.2.patch
prisma/: schema.prisma
scripts/: buildCook.sh  clean-recording-files.sh  commands.json  cookbuilds.sh  delayExpiry.ts  downloadCookBuilds.sh  manageEntitlements.mts  manageEntitlements.ts  sync.js
tasmas/: Dockerfile  Dockerfile.dev  README.md  logging_utils.py  process_flac_zip.py  recording_names.py  retry_drive_summaries.sh  summarizer.py  watch_flac_zips.py
tests/: conftest.py  test_logging_utils.py  test_notify_summary_delivery.py  test_process_flac_zip.py  test_provider_summarize.py  test_recording_names.py  test_state_and_config.py  test_summarizer.py  (+2 more)
(+675 files in other folders)
